<resources>
    <string name="app_name">امتحانک</string>
    <string name="enter_num_for_login">برای ورود یا ثبت نام، شماره تلفن همراه خود را وارد نمایید.</string>
    <string name="app_logo">لوگو اپلیکیشن</string>
    <string name="student_phone_number">شماره تلفن همراه دانش آموز</string>
    <string name="student">دانش آموز</string>
    <string name="teacher">دبیر</string>
    <string name="terms_and_conditions">ورود شما به معنای پذیرش<font color='#FF6054'><b> قوانین و مقررات و شرایط استفاده</b></font> است</string>
    <string name="terms_and_conditions_title">قوانین و مقررات</string>
    <string name="continue_to">ادامه</string>
    <string name="help">راهنمایی</string>
    <string name="cancel">انصراف</string>
    <string name="online_contact_support">ارتباط برخط با پشتیبانی</string>
    <string name="frequently_questions">سوالات متداول</string>
    <string name="our_team_is_ready_to_help_you">تیم ما آماده کمک رسانی به شما است</string>
    <string name="what_is_the_problem">چه مشکلی پیش آمده ؟</string>
    <string name="activation_code_sent">کد فعالسازی 4 رقمی به شماره شما ارسال شد</string>
    <string name="day">روز تولد</string>
    <string name="month">ماه تولد</string>
    <string name="year">سال تولد</string>
    <string name="full_name">نام و نام خانوادگی</string>
    <string name="register_to_use_features">برای استفاده از امکانات اپلیکیشن ثبت نام کنید</string>
    <string name="contact_support">تماس با پشتیبانی</string>
    <string name="close">بستن</string>
    <string name="again">دوباره</string>
    <string name="back">بازگشت</string>
    <string name="home">خانه</string>
    <string name="my_teachers">اساتید من</string>
    <string name="profile">پروفایل</string>
    <string name="exams">آزمون ها</string>
    <string name="setting">تنظیمات</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="about_us">درباره ما</string>
    <string name="logout_sure">آیا میخواهید از حساب کاربری خود خارج شوید ؟</string>
    <string name="no_cancel">خیر، لغو</string>
    <string name="yes_logout">بله، خروج</string>
    <string name="error_communicating_server">خطا در برقراری ارتباط با سرور</string>
    <string name="teachers">اساتید</string>
    <string name="main_courses">دروس اصلی</string>
    <string name="add_question">افزودن سوال</string>
    <string name="add_exam">افزودن آزمون</string>
    <string name="see_more">دیدن بقیه</string>
    <string name="course_image">تصویر درس</string>
    <string name="popular_exams">پرطرفدار ترین آزمون ها</string>
    <string name="exam_image">تصویر آزمون</string>
    <string name="experienced_teachers">مجرب ترین اساتید</string>
    <string name="teacher_image">تصویر استاد</string>
    <string name="open_menu">باز کردن منو</string>
    <string name="grade">پایه تحصیلی</string>
    <string name="activity_year">سال شروع به فعالیت</string>
    <string name="teacher_expertise">رشته های مورد تدریس</string>
    <string name="entered_code_is_not_correct">کد وارد شده صحیح نیست</string>
    <string name="add_remove_bookmark">افزودن یا برداشتن نشانک</string>
    <string name="description">توضیحات</string>
    <string name="feature_image">تصویر ویژگی</string>
    <string name="next">بعدی</string>
    <string name="exit">خروج</string>
    <string name="do_you_want_to_exit">آیا میخواهید خارج شوید ؟</string>
    <string name="If_you_exit_your_answers_will_not_be_saved">در صورت خروج پاسخ هایتان ذخیره نمی شوند.</string>
    <string name="choose_correct_option">گزینه صحیح را انتخاب کنید</string>
    <string name="report_question">گزارش خرابی سوال</string>
    <string name="i_dont_know">نمی دانم</string>
    <string name="start_exam">شروع آزمون</string>
    <string name="correct_answer">پاسخ صحیح</string>
    <string name="score_obtained">نمره کسب شده \n ( از 100 )</string>
    <string name="incorrect_answer">پاسخ غلط</string>
    <string name="unanswered">پاسخ نزده</string>
    <string name="finish_exam">اتمام آزمون</string>
    <string name="final_percentage">درصد نهایی :</string>
    <string name="bookmarks">نشان شده ها</string>
    <string name="filter">فیلتر</string>
    <string name="search_exam">جستجو آزمون</string>
    <string name="first">اول</string>
    <string name="second">دوم</string>
    <string name="third">سوم</string>
    <string name="fourth">چهارم</string>
    <string name="fifth">پنجم</string>
    <string name="sixth">ششم</string>
    <string name="seventh">هفتم</string>
    <string name="eighth">هشتم</string>
    <string name="ninth">نهم</string>
    <string name="tenth">دهم</string>
    <string name="eleventh">یازدهم</string>
    <string name="twelfth">دوازدهم</string>
    <string name="classes">کلاس ها</string>
    <string name="lesson">درس</string>
    <string name="exam_level">سطح آزمون</string>
    <string name="exam_description">توضیحات آزمون ( اختیاری )</string>
    <string name="exam_name">نام آزمون</string>
    <string name="exam_price">قیمت آزمون</string>
    <string name="tap_to_select_exam_image">برای انتخاب تصویر آزمون ضربه بزنید ( اختیاری )</string>
    <string name="teacher_message">پیام دبیر ( اختیاری )</string>
    <string name="delete">حذف</string>
    <string name="add_exam_question">افزودن سوالات آزمون</string>
    <string name="tap_to_add_exam_question">برای افزودن سوال ضربه بزنید</string>
    <string name="tap_to_add_image_to_question">برای افزودن تصویر به سوال ضربه بزنید</string>
    <string name="tap_to_add_image_to_option_optional">برای افزودن تصویر به گزینه ضربه بزنید ( اختیاری )</string>
    <string name="add_image">افزودن تصویر</string>
    <string name="description_optional">توضیحات ( اختیاری )</string>
    <string name="add_option">افزودن گزینه</string>
    <string name="add_questions">افزودن سوالات</string>
    <string name="question_option">گزینه سوال</string>
    <string name="is_option_correct">آیا این گزینه صحیح است ؟</string>
    <string name="question_title">صورت سوال</string>
    <string name="you_have_not_selected_image_for_question">شما هیچ تصویری را برای این سوال انتخاب نکرده اید</string>
    <string name="you_have_not_added_any_options_for_question">شما هیچ گزینه ای را برای این سوال اضافه نکرده اید</string>
    <string name="previous">قبلی</string>
    <string name="scroll_up">حرکت به بالا</string>
    <string name="scroll_down">حرکت به پایین</string>
    <string name="edit">ویرایش</string>
    <string name="edit_visibility">تغییر نمایانی</string>
    <string name="yes_delete">بله، حذف</string>
    <string name="public_visibility">نمایش عمومی</string>
    <string name="hide_visibility">عدم نمایش</string>
    <string name="exclusive_visibility">نمایش اختصاصی</string>
    <string name="options">گزینه ها</string>
    <string name="my_exams">آزمون های من</string>
    <string name="profile_image">تصویر پروفابل</string>
    <string name="general_information">اطلاعات کلی</string>
    <string name="professional_information">اطلاعات تخصصی</string>
    <string name="phone_number">شماره تلفن</string>
    <string name="edit_general_information">ویرایش اطلاعات کلی</string>
    <string name="edit_professional_information">ویرایش اطلاعات تخصصی</string>
    <string name="your_honors">افتخارات شما</string>
    <string name="honor_image">تصویر افتخار</string>
    <string name="you_have_earned_this_honor">شما این افتخار را کسب کرده اید</string>
</resources>