<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:paddingBottom="16dp">

    <View
        android:id="@+id/viewLine"
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_all_corner_rounded"
        android:backgroundTint="@color/transparent_color_15_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHelpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/what_is_the_problem"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLine" />

    <TextView
        android:id="@+id/tvHelpSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_team_is_ready_to_help_you"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHelpTitle" />

    <View
        android:id="@+id/viewLineCardViewSupportTop"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/transparent_color_10_percent"
        app:layout_constraintBottom_toTopOf="@+id/cardViewSupport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewSupport"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:outlineProvider="none"
        app:cardCornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHelpSubject">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/online_contact_support"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_support"
            app:drawableTint="@color/gray" />

    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/viewLineCardViewContactTop"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/transparent_color_10_percent"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@id/cardViewContactSupport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewContactSupport"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:outlineProvider="none"
        app:cardCornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewSupport">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/contact_support"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_phone"
            app:drawableTint="@color/gray" />

    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/viewLineCardViewContactBottom"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/transparent_color_10_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewContactSupport" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewFrequentlyQuestions"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:outlineProvider="none"
        app:cardCornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLineCardViewContactBottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/frequently_questions"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_frequently_questions"
            app:drawableTint="@color/gray" />

    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/viewLineCardViewFrequentlyQuestionsBottom"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/transparent_color_10_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFrequentlyQuestions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btCancelHelp"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:outlineProvider="none"
        android:text="@string/cancel"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFrequentlyQuestions" />

</androidx.constraintlayout.widget.ConstraintLayout>