<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".features.regScreen.RegisterFragment">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:text="@string/register_to_use_features"
        android:textAlignment="center"
        android:textColor="@color/black_light"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/radioGroupRoleReg"
        layout="@layout/module_radiogroup_role"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayoutFullNameReg"
        style="@style/CustomTextInputLayoutPlaceHolderTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="12dp"
        android:hint="@string/full_name"
        app:boxCornerRadiusBottomEnd="9dp"
        app:boxCornerRadiusBottomStart="9dp"
        app:boxCornerRadiusTopEnd="9dp"
        app:boxCornerRadiusTopStart="9dp"
        app:boxStrokeWidth="1.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupRoleReg"
        app:placeholderText="مثلا : سینا دیندارلو"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullNameReg"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="2dp"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLayoutFullNameReg">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutDayReg"
            style="@style/CustomTextInputLayoutPlaceHolderTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:hint="@string/day"
            app:boxCornerRadiusBottomEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxStrokeWidth="1.5dp"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupRoleReg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDayReg"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:paddingVertical="2dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutMonthReg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:hint="@string/month"
            app:boxCornerRadiusBottomEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxStrokeWidth="1.5dp"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/tvMonthReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="8"
                android:maxLines="1"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutYearReg"
            style="@style/CustomTextInputLayoutPlaceHolderTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:hint="@string/year"
            app:boxCornerRadiusBottomEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxStrokeWidth="1.5dp"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupRoleReg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etYearReg"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:paddingVertical="2dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>